CHANGES for LIRE
================

2013-07-17
==========
  - Fixed bug in EdgeHistogram Extraction.
  - Added new test to find bugs in TestGeneral

2013-07-16
==========
  - Fixed bug in JCD serialization.

2013-07-12
==========
  - deprecated DocumentFactory
  - Added forceMerge(1) to LocalFeatureHistogramBuilder (as reported to be needed by
    James Charters, me@jamescharters.info)
  - Set parallel k-means as default in LocalFeatureHistogramBuilder

2013-07-11
==========
  - Added name and field name methods to LireFeature interface to simplify creation of builders and searchers.
  - Updated GenericDocumentBuilder and GenericFastImageSearcher to reflect the changes
  - Updated documentation in several classes
  - deprecated GenericImageSearcher
  - Added histogram quantization to LocalFeatureHistogramBuilder & fixed bug in feature counting.

2013-07-10
==========
  - Added getDoubleHistogram to FuzzyColorHistogram (by patch contributed by Franz Graf, franz.graf@gmail.com)

2013-07-07
==========
  - Added thresholding in ImageUtils

2013-07-07
==========
  - Added new, easier constructor to GenericDocumentBuilder.
  - Fixed bug in quantization of PHOG histograms.
  - Updated to commons math 3.2
  - Added simplified constructors to BitSamplingImageSearcher
  - Added lookup data structures to GenericDocumentBuilder

2013-07-06
==========
  - Added BinaryPatternsPyramid

2013-07-01
==========
  - Re-organized joint histograms
  - Re-organized getGrayscaleImage(...)
  - Re-coded trimWhiteSpace(...) in ImageUtils

2013-06-25
==========
  - Mavenization of the project (Sandeep Gupta twitter.com/sangupta)
  - Removed all warnings of resource leaks (Sandeep Gupta twitter.com/sangupta)
  - Implemented type-safety by using generics than raw types. (Sandeep Gupta twitter.com/sangupta) - only partial patch

2013-06-23
==========
  - Added net.semanticmetadata.lire.indexing.LireCustomCodec to allow for faster linear search